--- a/.travis.yml
+++ b/.travis.yml
@@ -24,5 +24,5 @@ script:
     - zzuf -B 10000 ./StratuxPay < /dev/null
     - zzuf -B 10000 ./StratuxPay < /dev/urandom
     - zzuf -B 10000 ./StratuxPay < testing/testing/valid_input
-    - zzuf -B 10000 ./StratuxPay < testing/testing/name_violation | grep "invalid"
+    - zzuf -B 10000 ./StratuxPay < testing/testing/name_violation | grep "correct"
     - zzuf -B 10000 ./StratuxPay < testing/testing/card_violation | grep "information"
